syntax = "proto3";

package comment.v1;
option go_package = "comment/v1;commentv1";

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns(CreateCommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns(DeleteCommentResponse);
  rpc GetCommentList(GetCommentListRequest) returns(GetCommentListResponse);
  rpc GetMoreReplies(GetMoreRepliesRequest) returns(GetMoreRepliesResponse);

}

message CreateCommentRequest{
  Comment comment = 1;

}


message CreateCommentResponse{

}

message DeleteCommentRequest{
  int64 id = 1;

}


message DeleteCommentResponse{

}

message GetCommentListRequest{
  int64 biz_id = 1;
  string biz = 2;
  int64 min_id = 3;
  int64 limit = 4;
}

message GetCommentListResponse{
  repeated Comment comments = 1;
}

message GetMoreRepliesRequest{
  int64 root_id = 1;
  int64 max_id = 2;
  int64 limit = 3;
}

message GetMoreRepliesResponse{
  repeated Comment comments = 1;
}


message Comment {
  int64 id = 1;
  int64 uid = 2;
  int64 biz_id = 3;
  string biz = 4;
  string content = 5;
  Comment root_comment = 6;
  Comment parent_comment = 7;

  int64 ctime = 8;
  int64 utime = 9;

}